--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <title>Stellar</title>
     <%= csrf_meta_tags %>
 
+    <%= javascript_include_tag "jquery.min.js" %>
+    <%= javascript_include_tag "jquery.scrollex.min.js" %>
+    <%= javascript_include_tag "jquery.scrolly.min.js" %>
+    <%= javascript_include_tag "skel.min.js" %>
+    <%= javascript_include_tag "main.js" %>
+    <%= javascript_include_tag "util.js" %>
+    <%= javascript_include_tag "respond.min.js" %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
   </head>
 
   <body>
